@@ -50,6 +50,7 @@ contains(QT_CONFIG, largefile):CONFIG += largefile
 contains(QT_CONFIG, build_all):CONFIG += build_all
 contains(QT_CONFIG, separate_debug_info):CONFIG += separate_debug_info
 contains(QT_CONFIG, separate_debug_info_nocopy):CONFIG += separate_debug_info_nocopy
+contains(QT_CONFIG, c++11):CONFIG += c++11
 
 #mac frameworks
 mac:!static:contains(QT_CONFIG, qt_framework) {
